[gd_scene load_steps=2 format=3 uid="uid://ccvn8owweybsr"]

[ext_resource type="Script" uid="uid://b2nddcthik6ca" path="res://logic/data/info/al_sound_manager.gd" id="1_wgeoa"]

[node name="AudioManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgeoa")

[node name="MusicPlayerA" type="AudioStreamPlayer" parent="."]
volume_db = -17.332

[node name="MusicPlayerB" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -12.381
pitch_scale = 0.76

[node name="ALSoundManager" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
